--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@ui-kitten/eva-icons": "^5.1.0",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
-    "formik": "^2.2.9",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "^7.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.1.0",
